Fixed dark mode CSS

--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 body { 
     background-color: #292d3f; 
-}
+} 
 #page {
     font-family: 'Roboto', sans-serif;
     margin: 35px auto; 
-    padding-top: 30px 4%;
+    padding: 30px 4%;
     padding-bottom: 30px 4%;
     box-shadow: 0px 10px  20px #000, 0 6px 6px rgba(0, 0, 0, 0.4);
     border: solid #323950 1px;
@@ -16,7 +16,6 @@ body {
     animation: fadein 2.1s;
     background-color: #323950;
     border-radius: 5px;
-
 }
 img {
     margin: 5px auto;
@@ -76,5 +75,5 @@ footer p {
     font-size: 85%;
 }
 .link {
-    color : white;
+    color: white;
 }
